--- a/view/adfab-user/admin/user.phtml
+++ b/view/adfab-user/admin/user.phtml
@@ -108,6 +108,7 @@ $form->prepare();
             <div class="image-profil">
             	<?php echo $this->formLabel($form->get('avatar')); ?>
             	<?php echo $this->formFile($form->get('avatar')); ?>
+				<?php echo $this->formElementErrors($form->get('avatar')) ?>
             </div>
             <?php if($form->get('avatar')->getValue() != ''):?>
             	<img src="<?php echo $this->basePath($form->get('avatar')->getValue()); ?>" />
