--- a/view/adfab-user/frontend/account/profile.phtml
+++ b/view/adfab-user/frontend/account/profile.phtml
@@ -164,6 +164,7 @@
 				</div>
 				<div class="span6" id="avatarfile" data-profilfile="Votre photo de profil">
 					<?php echo $this->formFile($formInfo->get('avatar')); ?>
+					<?php echo $this->formElementErrors($formInfo->get('avatar')) ?>
 				</div>
 				<div class="span2">
 					<p class="orange-points">+ 150 pts</p>
