--- a/view/adfab-user/layout/1column.phtml
+++ b/view/adfab-user/layout/1column.phtml
@@ -25,7 +25,7 @@ $ourView  = $children[0];
 						<div id="logo">
 							<img src="<?php echo $this->basePath('images/logo.png');?>" alt="" />
 						</div>
-						<p>Your website</p>
+						<p>Playground</p>
 					</div>
 				</div>
 				<!-- END HEADER -->
